# math-mcp-server-sse

./: Dockerfile  pyproject.toml  smithery.yaml  uv.txt
src/math_mcp_server_sse/: __init__.py  __main__.py  server.py
