[project]
name = "mcp-server-math-sse"
version = "0.1.0"
description = "Math operations"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "swaroop" }]
maintainers = [{ name = "swaroop", email = "swaroopkasaraneni@gmail.com" }]
keywords = ["http", "mcp", "llm", "automation"]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.1.3",
    "protego>=0.3.1",
    "pydantic>=2.0.0",
    "readabilipy>=0.2.0",
    "requests>=2.32.3",
]

[project.scripts]
mcp-server-math-sse = "mcp_server_math_sse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
